--- a/index.html
+++ b/index.html
@@ -14,17 +14,14 @@
     <header>
         <h1>Welcome Traveller</h1>
     </header>
+    
     <nav> 
-        <div>
-            <input type="image" src="./Assets/images/traveller.png" height="200" width="200"/>
-            
-                <ul>
-                    <li>Bio</li>
-                    <li>Projects</li>
-                    <li>GitHub</li>
-                    <li>LinkedIn</li>
-                </ul>
-        </div>
+        <ul>
+            <li><a href="#" class="link-underline">Bio</a></li>
+            <li><a href="#" class="link-underline">Projects</a></li>
+            <li><a href="https://www.linkedin.com/in/tobias-virgona-a8b25818b/" target="_blank" class="link-underline">LinkedIn</a></li>
+            <li><a href="https://github.com/Virgona" target="_blank" class="link-underline">GitHub</a></li>
+            </ul>     
     </nav>
 </body>
 </html>
