Changes and Additions
Deleted some no longer needed images
inserted a picture of myself. Made a bio and a side bar with contents
added Podcast with a working link to the nav bar and changed the background to be entirely wood

--- a/index.html
+++ b/index.html
@@ -21,7 +21,25 @@
             <li><a href="#" class="link-underline">Projects</a></li>
             <li><a href="https://www.linkedin.com/in/tobias-virgona-a8b25818b/" target="_blank" class="link-underline">LinkedIn</a></li>
             <li><a href="https://github.com/Virgona" target="_blank" class="link-underline">GitHub</a></li>
+            <li><a href="https://directory.libsyn.com/shows/view/id/forevermovieboys" target="_blank" class="link-underline">Podcast</a></li>
             </ul>     
     </nav>
+
+    <aside>
+        <h2>My Bio</h2>
+        <h2>My Projects</h2>
+        <h2>My Contact Info</h2>
+    </aside>
+    <main>
+        <p>
+            Hello friend! My name is Tobias.<br>A 30 years young and aspiring to be one of the great developers.<br>I am passionate about films for which I co-host a podcast called Forever Movie Boys.<br> 
+            If I am not watching movies or podcasting you can catch me gaming. Like an idiot I have recently gotten into playing League of Legends (Diana main, lets go).<br> This page isnt much yet - stick with me and watch it grow! 
+        </p>
+        <img src="./Assets/images/me.jpg" alt="self portrait" width="300" height="300">
+    </main>
+
+    <content>
+        
+    </content>
 </body>
 </html>
