Changed my layout to something more asthetic. tidy up the folders

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tobias, Portfolio</title>
+    <title>Tobias, A Portfolio</title>
     <link rel="stylesheet" href="./assets/Resets.css" />
     <link rel="stylesheet" href="./assets/Styles.css" />
 </head>
@@ -31,11 +31,13 @@
         <h2>My Contact Info</h2>
     </aside>
     <main>
-        <p>
-            Hello friend! My name is Tobias.<br>A 30 years young and aspiring to be one of the great developers.<br>I am passionate about films for which I co-host a podcast called Forever Movie Boys.<br> 
-            If I am not watching movies or podcasting you can catch me gaming. Like an idiot I have recently gotten into playing League of Legends (Diana main, lets go).<br> This page isnt much yet - stick with me and watch it grow! 
-        </p>
-        <img src="./Assets/images/me.jpg" alt="self portrait" width="300" height="300">
+        <section class="row">
+            <p>
+                Hello friend! My name is Tobias.<br> 30 years young and aspiring to be one of the great developers.<br>I am passionate about films for which I co-host a podcast called Forever Movie Boys.<br> 
+                If I am not watching movies or podcasting you can catch me gaming. Like an idiot I have recently gotten into playing League of Legends (Swain main, lets go).<br> This page isnt much yet - stick with me and watch it grow! 
+            </p>
+            <img src="./Assets/images/me.jpg" alt="self portrait" width="200" height="200">
+        </section>
     </main>
 
     <content>
