--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
     </main>
 
     <content>
-        
+        <div class="row justifyCenter">
+            <img src="./Assets/images/Village.jpg" alt="Project 1" width="800" height="500">
+        </div>
+        <div class="column spaceBetween">
+            <img src="./Assets/images/Mountain.jpg" alt="Project 2" width="300" height="300">
+            <img src="./Assets/images/Cave.jpg" alt="Project 3" width="300" height="300">
+            <img src="./Assets/images/Lake.jpg" alt="Project 4" width="300" height="300">
+            <img src="./Assets/images/forrestMountain.jfif" alt="Project 5" width="300" height="300">
+            </div>
     </content>
 </body>
 </html>
