--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
     </main>
 
     <content>
-        <div class="row justifyCenter">
-            <img src="./Assets/images/Village.jpg" alt="Project 1" width="800" height="500">
+        <div class="imageProjectBox">
+            <div class="imageProject1">
+                <p>
+                    Project 1 Coming Soon
+                </p>
+        </div>
         </div>
         <div class="column spaceBetween">
             <img src="./Assets/images/Mountain.jpg" alt="Project 2" width="300" height="300">
