--- a/index.html
+++ b/index.html
@@ -41,18 +41,38 @@
     </main>
 
     <content>
-        <div class="imageProjectBox">
-            <div class="imageProject1">
+        <figure class="imageProject1 imageProjectBox">
+            <p>
+                Project 1 Coming Soon
+            </p>
+        </figure>
+        <div class="column">
+            <figure class="imageProject2">
                 <p>
-                    Project 1 Coming Soon
+                    Project coming soon
                 </p>
-        </div>
-        </div>
+            </figure>
+            <figure class="imageProject3">
+                <p>
+                    Project coming soon
+                </p>
+            </figure>
+            <figure class="imageProject4">
+                <p>
+                    Project coming soon
+                </p>
+            </figure>
+            <figure class="imageProject5">
+                <p>
+                    Project coming soon
+                </p>
+            </figure>
+        </div>    
         <div class="column spaceBetween">
-            <img src="./Assets/images/Mountain.jpg" alt="Project 2" width="300" height="300">
+            <!-- <img src="./Assets/images/Mountain.jpg" alt="Project 2" width="300" height="300">
             <img src="./Assets/images/Cave.jpg" alt="Project 3" width="300" height="300">
             <img src="./Assets/images/Lake.jpg" alt="Project 4" width="300" height="300">
-            <img src="./Assets/images/forrestMountain.jfif" alt="Project 5" width="300" height="300">
+            <img src="./Assets/images/forrestMountain.jfif" alt="Project 5" width="300" height="300"> -->
             </div>
     </content>
 </body>
