--- a/index.html
+++ b/index.html
@@ -17,20 +17,17 @@
     
     <nav> 
         <ul>
-            <li><a href="#" class="link-underline">Bio</a></li>
-            <li><a href="#" class="link-underline">Projects</a></li>
+            <li><a href="#My-Bio" class="link-underline">Bio</a></li>
+            <li><a href="#My-Projects" class="link-underline">Projects</a></li>
+            <li><a href="#My-Contacts" class="link-underline">Contact</a></li>
             <li><a href="https://www.linkedin.com/in/tobias-virgona-a8b25818b/" target="_blank" class="link-underline">LinkedIn</a></li>
             <li><a href="https://github.com/Virgona" target="_blank" class="link-underline">GitHub</a></li>
             <li><a href="https://directory.libsyn.com/shows/view/id/forevermovieboys" target="_blank" class="link-underline">Podcast</a></li>
             </ul>     
     </nav>
 
-    <aside>
-        <h2>My Bio</h2>
-        <h2>My Projects</h2>
-        <h2>My Contact Info</h2>
-    </aside>
     <main>
+        <h2 a id="My-Bio">My Bio</h2>
         <section class="row">
             <p>
                 Hello friend! My name is Tobias.<br> 30 years young and aspiring to be one of the great developers.<br>I am passionate about films for which I co-host a podcast called Forever Movie Boys.<br> 
@@ -41,6 +38,7 @@
     </main>
 
     <content>
+        <h2 a id="My-Projects">My Projects</h2>
         <figure class="imageProject1 imageProjectBox">
             <p>
                 Project 1 Coming Soon
@@ -68,12 +66,22 @@
                 </p>
             </figure>
         </div>    
-        <div class="column spaceBetween">
-            <!-- <img src="./Assets/images/Mountain.jpg" alt="Project 2" width="300" height="300">
-            <img src="./Assets/images/Cave.jpg" alt="Project 3" width="300" height="300">
-            <img src="./Assets/images/Lake.jpg" alt="Project 4" width="300" height="300">
-            <img src="./Assets/images/forrestMountain.jfif" alt="Project 5" width="300" height="300"> -->
-            </div>
+        <address>
+            <h2 a id="My-Contacts">My Contact Deets</h2>
+            <p>
+                <ul>
+                    <li>Phone - 0420989970</li>
+                    <li>Email - tobiasvirgona@gmail.com</li>
+                </ul>
+            </p>
+        </address>
     </content>
+
+    <footer>
+        <p>
+            Made with love, by Tobias Virgona
+        </p>
+    </footer>
+
 </body>
 </html>
