--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tobias, A Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/images/traveller.png">
     <link rel="stylesheet" href="./assets/Resets.css" />
     <link rel="stylesheet" href="./assets/Styles.css" />
 </head>
@@ -31,7 +32,7 @@
         <section class="row">
             <p>
                 Hello friend! My name is Tobias.<br> 30 years young and aspiring to be one of the great developers.<br>I am passionate about films for which I co-host a podcast called Forever Movie Boys.<br> 
-                If I am not watching movies or podcasting you can catch me gaming. Like an idiot I have recently gotten into playing League of Legends (Swain main, lets go).<br> This page isnt much yet - stick with me and watch it grow! 
+                If I am not watching movies or podcasting you can catch me playing games or in the kitchen thinking i'm Gordon Ramsey.<br> This page isnt much yet - stick with me and watch it grow! 
             </p>
             <img src="./Assets/images/me.jpg" alt="self portrait" width="200" height="200">
         </section>
@@ -43,27 +44,32 @@
             <p>
                 Project 1 Coming Soon
             </p>
+            <h3 id="project1Title">React/Java.CSS</h3>
         </figure>
         <div class="column">
             <figure class="imageProject2">
                 <p>
                     Project coming soon
                 </p>
+                <h3>Node/IoT</h3>
             </figure>
             <figure class="imageProject3">
                 <p>
                     Project coming soon
                 </p>
+                <h3>MERN Stack</h3>
             </figure>
             <figure class="imageProject4">
                 <p>
                     Project coming soon
                 </p>
+                <h3>HTML/CSS</h3>
             </figure>
             <figure class="imageProject5">
                 <p>
                     Project coming soon
                 </p>
+                <h3>MERN Stack</h3>
             </figure>
         </div>    
         <address>
