renamed Assets to assets

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tobias, A Portfolio</title>
     <link rel="icon" type="image/x-icon" href="./Assets/images/traveller.png">
-    <link rel="stylesheet" href="./assets/Resets.css" />
-    <link rel="stylesheet" href="./assets/Styles.css" />
+    <link rel="stylesheet" href="./Assets/Resets.css" />
+    <link rel="stylesheet" href="./Assets/Styles.css" />
 </head>
 
 <body>
